welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:10: error: illegal start of simple pattern
var case = 0
    ^Runner:15: error: '=' expected but '}' found.
	}
        ^