welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (!estFaceMur()) {
  avance()
}
while (estFaceMur()) {
  gauche()
  avance()
  droite()
  avance()
}
var case = 0
for (case <- 1 to 3) {
  avance()
}